Incluindo geração de relatório xunit

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto de exemplo com testes do CasperJS utilizando o pattern Page Objects, que fazem parte do post \"Usando Page Objects em testes com CasperJS\": http://goo.gl/c3jOH0",
   "main": "teste.js",
   "scripts": {
-    "test": "casperjs test teste.js"
+    "test": "casperjs test teste.js --xunit=log.xml"
   },
   "repository": {
     "type": "git",
